fix the weirdly overflowing background imagegit add style.css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 div {
   position: relative;
   bottom: 1600px;
